# Basic-Engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
shaders/: input_structures.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.h  Descriptors.cpp  Descriptors.h  Engine.cpp  Engine.h  Images.cpp  Images.h  Initializers.cpp  Initializers.h  Main.cpp  Materials.cpp  Materials.h  Mesh.cpp  Mesh.h  Pipelines.cpp  Pipelines.h  Render.cpp  Render.h  Types.h
